--- a/contato.html
+++ b/contato.html
@@ -23,14 +23,14 @@
               stroke-linecap="round" stroke-linejoin="round">
               <path
                 d="M22 16.92v3a2 2 0 0 1-2.18 2 19.91 19.91 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.91 19.91 0 0 1 2.08 4.18 2 2 0 0 1 4.05 2h3a2 2 0 0 1 2 1.72c.14.97.4 1.92.7 2.81a2 2 0 0 1-.45 2.11L8 9c1.5 2.7 3.8 5 6.5 6.5l.35-.3a2 2 0 0 1 2.11-.45c.89.3 1.84.56 2.81.7A2 2 0 0 1 22 16.92Z" />
-            </svg></span> (27) 3223-0868 </a> <a class="topbar__link"
-          href="https://wa.me/552732070301?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank"
+            </svg></span> (66) 9.9259-6142 </a> <a class="topbar__link"
+          href="https://wa.me/5566992596142?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank"
           rel="noopener"> <span class="topbar__icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
               <path d="M12 2a10 10 0 0 0-8.66 15.06L2 22l4.95-1.31A10 10 0 1 0 12 2Z" />
               <path
                 d="m16.71 15.29-2-1a1 1 0 0 0-1 .09l-.5.33a1 1 0 0 1-1.09-.06 8.76 8.76 0 0 1-2.63-2.62 1 1 0 0 1-.06-1.09l.33-.5a1 1 0 0 0 .09-1l-1-2a1 1 0 0 0-1.54-.27A3.17 3.17 0 0 0 8 10.58a9.65 9.65 0 0 0 5.42 5.42 3.17 3.17 0 0 0 2.34-.22 1 1 0 0 0-.05-1.49Z" />
-            </svg></span> WhatsApp (27) 3207-0301 </a> </div>
+            </svg></span> WhatsApp (66) 9.9900-6383 </a> </div>
       <div class="topbar__group"> <span class="topbar__link"><span class="topbar__icon" aria-hidden="true"><svg
               viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
               stroke-linejoin="round">
@@ -41,7 +41,7 @@
               stroke-linecap="round" stroke-linejoin="round">
               <path d="M21 10c0 5-9 12-9 12S3 15 3 10a9 9 0 1 1 18 0Z" />
               <circle cx="12" cy="10" r="3" />
-            </svg></span>Vitória · Espírito Santo</span> </div>
+            </svg></span>Sinop · Mato Grosso</span> </div>
     </div>
   </div>
   <header class="header">
@@ -53,9 +53,9 @@
           <li><a class="nav__link" href="sobre.html">Sobre</a></li>
           <li><a class="nav__link" href="servicos.html">Serviços</a></li>
           <li><a class="nav__link" href="contato.html">Contato</a></li>
-          <li><a class="button button--primary nav__cta-mobile" href="#formulario">Agendar consulta</a></li>
+          <li><a class="button button--primary nav__cta-mobile" href="#formulario">Fale Conosco</a></li>
         </ul>
-      </nav> <a class="button button--primary nav__cta" href="#formulario">Agendar consulta</a> <button
+      </nav> <a class="button button--primary nav__cta" href="#formulario">Fale Conosco</a> <button
         class="nav-toggle" type="button" aria-label="Alternar menu" aria-expanded="false" aria-controls="primary-nav">
         <span></span> <span></span> <span></span> </button>
     </div>
@@ -78,12 +78,12 @@
           <h3>Atendimento imediato</h3>
           <p>Prefere falar agora? Escolha o canal ideal:</p>
           <ul class="highlight-list">
-            <li><a href="tel:+552732230868">(27) 3223-0868</a> — Central de atendimento.</li>
-            <li><a href="https://wa.me/552732070301?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento."
-                target="_blank" rel="noopener">WhatsApp (27) 3207-0301</a> — Comercial e suporte.</li>
+            <li><a href="tel:+5566992596142">(66) 9.9259-6142</a> — Central de atendimento.</li>
+            <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento."
+                target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a> — Comercial e suporte.</li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a> — Propostas e contratos.</li>
           </ul>
-          <p>Endereço: Vitória · Espírito Santo. Atendimento presencial e remoto para todo o estado.</p>
+          <p>Endereço: Sinop · Mato Grosso. Atendimento presencial e remoto para todo o estado.</p>
         </div>
         <div class="surface-block">
           <h3>Solicite uma proposta personalizada</h3>
@@ -119,11 +119,11 @@
         <div>
           <h4 class="footer__title">Contato</h4>
           <ul class="footer__list">
-            <li><a href="tel:+552732230868">(27) 3223-0868</a></li>
-            <li><a href="https://wa.me/552732070301?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento."
-                target="_blank" rel="noopener">WhatsApp (27) 3207-0301</a></li>
+            <li><a href="tel:+5566992596142">(66) 9.9259-6142</a></li>
+            <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento."
+                target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Vitória • Espírito Santo</li>
+            <li>Sinop • Mato Grosso</li>
           </ul>
         </div>
         <div>
