--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           <li><a class="nav__link" href="sobre.html">Sobre</a></li>
           <li><a class="nav__link" href="servicos.html">Serviços</a></li>
           <li><a class="nav__link" href="contato.html">Contato</a></li>
-          <li><a class="button button--primary nav__cta-mobile" href="contato.html#formulario">Agendar consulta</a></li>
+          <li><a class="button button--primary nav__cta-mobile" href="contato.html#formulario">Ver mais</a></li>
         </ul>
       </nav>
-      <a class="button button--primary nav__cta" href="contato.html#formulario">Agendar consulta</a>
+      <a class="button button--primary nav__cta" href="contato.html#formulario">Ver mais</a>
       <button class="nav-toggle" type="button" aria-label="Alternar menu" aria-expanded="false" aria-controls="primary-nav">
         <span></span>
         <span></span>
@@ -101,15 +101,15 @@
       <div class="wrapper hero__grid">
         <div class="hero__content">
           <span class="badge shadow-soft">Medicina e Segurança do Trabalho</span>
-          <h1 class="hero__title">Transformamos <span class="hero__highlight">gestão de SST</span> em <strong class="hero__highlight">segurança</strong> e <strong class="hero__highlight">produtividade</strong> para o seu negócio.</h1>
-          <p class="hero__text">Da implantação do eSocial SST aos treinamentos in company, a JR Segurança apoia sua empresa com <strong class="hero__highlight">equipe multidisciplinar</strong>, <strong class="hero__highlight">tecnologia</strong> e <strong class="hero__highlight">acompanhamento contínuo</strong> em todo o Espírito Santo.</p>
+          <h1 class="hero__title">Transformamos <span class="hero__highlight">Gestão de SST</span> em <strong class="hero__highlight">Segurança</strong> e <strong class="hero__highlight">Produtividade</strong> para o seu Negócio.</h1>
+          <p class="hero__text">Da implantação do eSocial SST aos treinamentos in company, a JR Segurança apoia sua empresa com <strong class="hero__highlight">equipe multidisciplinar</strong>, <strong class="hero__highlight">tecnologia</strong> e <strong class="hero__highlight">acompanhamento contínuo</strong> em todo o Mato Grosso.</p>
           <div class="hero__actions">
-            <a class="button button--primary shadow-soft" href="contato.html#formulario">Quero falar com um especialista</a>
+            <a class="button button--primary shadow-soft" href="contato.html#formulario">Ver mais</a>
             <a class="button button--ghost shadow-soft" href="#servicos">Conheça nossos serviços</a>
           </div>
           <div class="hero__trust shadow-soft">
             <img src="assets/img/dr1.png" alt="Equipe JR Segurança em atendimento" loading="lazy" />
-            <p><strong>+150 empresas atendidas</strong> com indicadores, conformidade legal e cultura de prevenção fortalecida.</p>
+            <p><strong>+50 empresas atendidas</strong> com indicadores, conformidade legal e cultura de prevenção fortalecida.</p>
           </div>
         </div>
 
@@ -268,9 +268,9 @@
             <div class="services__carousel-viewport">
               <div class="services__carousel-track">
                 <div class="services__carousel-slide"><img src="assets/img/20.jpeg" alt="Serviços JR Segurança 20" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/21.jpeg" alt="Serviços JR Segurança 21" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/22.jpeg" alt="Serviços JR Segurança 22" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/23.jpeg" alt="Serviços JR Segurança 23" loading="lazy" /></div>
+                <div class="services__carousel-slide"><img src="assets/img/19.jpeg" alt="Serviços JR Segurança 21" loading="lazy" /></div>
+                <div class="services__carousel-slide"><img src="assets/img/18.jpeg" alt="Serviços JR Segurança 22" loading="lazy" /></div>
+                <div class="services__carousel-slide"><img src="assets/img/15.jpeg" alt="Serviços JR Segurança 23" loading="lazy" /></div>
               </div>
             </div>
             <button class="services__carousel-control services__carousel-control--prev" type="button" aria-label="Imagem anterior">
@@ -294,7 +294,7 @@
           <p class="booking__text">Agende um diagnóstico gratuito e receba um plano inicial com prioridades, prazos e custos estimados — sem compromisso.</p>
           <div class="badges" aria-hidden="true">
             <span class="badge shadow-soft">Diagnóstico gratuito</span>
-            <span class="badge shadow-soft">Atendimento ES</span>
+            <span class="badge shadow-soft">Atendimento MT</span>
           </div>
           <ul class="highlight-list">
             <li>Documentos e laudos entregues dentro dos prazos legais.</li>
@@ -367,10 +367,10 @@
         <div>
           <h4 class="footer__title">Contato</h4>
           <ul class="footer__list">
-            <li><a href="tel:+552732230868">(27) 3223-0868</a></li>
-            <li><a href="https://wa.me/552732070301?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">WhatsApp (27) 3207-0301</a></li>
+            <li><a href="tel:+5566992596142">(66) 9.9259-6142</a></li>
+            <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Vitória • Espírito Santo</li>
+            <li>Vitória • Mato Grosso</li>
           </ul>
         </div>
 
