--- a/sobre.html
+++ b/sobre.html
@@ -34,7 +34,7 @@
               <path d="m16.71 15.29-2-1a1 1 0 0 0-1 .09l-.5.33a1 1 0 0 1-1.09-.06 8.76 8.76 0 0 1-2.63-2.62 1 1 0 0 1-.06-1.09l.33-.5a1 1 0 0 0 .09-1l-1-2a1 1 0 0 0-1.54-.27A3.17 3.17 0 0 0 8 10.58a9.65 9.65 0 0 0 5.42 5.42 3.17 3.17 0 0 0 2.34-.22 1 1 0 0 0-.05-1.49Z" />
             </svg>
           </span>
-          WhatsApp (27) 3207-0301
+          WhatsApp (66) 9.9900-6383
         </a>
       </div>
       <div class="topbar__group">
@@ -60,10 +60,10 @@
           <li><a class="nav__link" href="sobre.html">Sobre</a></li>
           <li><a class="nav__link" href="servicos.html">Serviços</a></li>
           <li><a class="nav__link" href="contato.html">Contato</a></li>
-          <li><a class="button button--primary nav__cta-mobile" href="contato.html#formulario">Agendar consulta</a></li>
+          <li><a class="button button--primary nav__cta-mobile" href="contato.html#formulario">Ver mais</a></li>
         </ul>
       </nav>
-      <a class="button button--primary nav__cta" href="contato.html#formulario">Agendar consulta</a>
+      <a class="button button--primary nav__cta" href="contato.html#formulario">Ver mais</a>
       <button class="nav-toggle" type="button" aria-label="Alternar menu" aria-expanded="false" aria-controls="primary-nav">
         <span></span>
         <span></span>
@@ -89,7 +89,7 @@
                 <div class="about-stat__label">Atuação em SST</div>
               </div>
               <div class="about-stat">
-                <div class="about-stat__number">ES inteiro</div>
+                <div class="about-stat__number">MT inteiro</div>
                 <div class="about-stat__label">Presença regional</div>
               </div>
             </div>
@@ -148,10 +148,10 @@
         <div>
           <h4 class="footer__title">Contato</h4>
           <ul class="footer__list">
-            <li><a href="tel:+552732230868">(27) 3223-0868</a></li>
-            <li><a href="https://wa.me/552732070301?text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento." target="_blank" rel="noopener">WhatsApp (27) 3207-0301</a></li>
+            <li><a href="tel:+5566992596142">(66) 9.9259-6142</a></li>
+            <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Vitória – Espírito Santo</li>
+            <li>Sinop – Mato Grosso</li>
           </ul>
         </div>
         <div>
