--- a/servicos.html
+++ b/servicos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -67,7 +67,7 @@
     <section class="section" aria-label="Projetos recentes" style="padding:4rem 0;background:#f8fafc;border-radius:1.5rem;margin-bottom:2.5rem;">
       <div class="wrapper">
         <div style="text-align:center;margin-bottom:2.25rem;">
-          <h2 style="font-size:2rem;margin-bottom:0.6rem;font-weight:700;color:#0f1724;">PROJETOS RECENTES</h2>
+          <h2 style="font-size:2rem;margin-bottom:0.6rem;font-weight:700;color:#0f1724;">NOSSOS SERVIÇOS</h2>
           <p style="max-width:64rem;margin:0 auto;color:#475569;font-size:1.05rem;">Algumas das nossas realizações em SST, demonstrando experiência e compromisso com a excelência.</p>
         </div>
 
