--- a/sobre.html
+++ b/sobre.html
@@ -19,15 +19,15 @@
   <div class="topbar" role="region" aria-label="Informações de contato">
     <div class="topbar__content">
       <div class="topbar__group">
-        <a class="topbar__link" href="tel:+552732230868">
+        <a class="topbar__link" href="tel:+5566992596142">
           <span class="topbar__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
               <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.91 19.91 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.91 19.91 0 0 1 2.08 4.18 2 2 0 0 1 4.05 2h3a2 2 0 0 1 2 1.72c.14.97.4 1.92.7 2.81a2 2 0 0 1-.45 2.11L8 9c1.5 2.7 3.8 5 6.5 6.5l.35-.3a2 2 0 0 1 2.11-.45c.89.3 1.84.56 2.81.7A2 2 0 0 1 22 16.92Z" />
             </svg>
           </span>
-          (27) 3223-0868
+          (66) 9.9259-6142
         </a>
-        <a class="topbar__link" href="https://wa.me/552732070301?text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento." target="_blank" rel="noopener">
+        <a class="topbar__link" href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">
           <span class="topbar__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
               <path d="M12 2a10 10 0 0 0-8.66 15.06L2 22l4.95-1.31A10 10 0 1 0 12 2Z" />
@@ -44,7 +44,7 @@
         </span>
         <span class="topbar__link">
           <span class="topbar__icon" aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 5-9 12-9 12S3 15 3 10a9 9 0 1 1 18 0Z" /><circle cx="12" cy="10" r="3" /></svg></span>
-          Vitória – Espírito Santo
+          Sinop – Mato Grosso
         </span>
       </div>
     </div>
