--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="topbar" role="region" aria-label="Informações de contato">
     <div class="topbar__content">
       <div class="topbar__group">
-        <a class="topbar__link" href="tel:+552732230868">
+        <a class="topbar__link" href="tel:+5566992596142">
           <span class="topbar__icon" aria-hidden="true">
             <!-- phone svg -->
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -31,9 +31,9 @@
                 d="M22 16.92v3a2 2 0 0 1-2.18 2 19.91 19.91 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.91 19.91 0 0 1 2.08 4.18 2 2 0 0 1 4.05 2h3a2 2 0 0 1 2 1.72 13 13 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8 9c1.5 2.7 3.8 5 6.5 6.5l.35-.3a2 2 0 0 1 2.11-.45 13 13 0 0 0 2.81.7A2 2 0 0 1 22 16.92Z" />
             </svg>
           </span>
-          (27) 3223-0868
+          (66) 9.9259-6142
         </a>
-        <a class="topbar__link" href="https://wa.me/552732070301?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank"
+        <a class="topbar__link" href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank"
           rel="noopener">
           <span class="topbar__icon" aria-hidden="true">
             <!-- whatsapp svg -->
@@ -43,7 +43,7 @@
               <path d="m16.71 15.29-2-1a1 1 0 0 0-1 .09l-.5.33a1 1 0 0 1-1.09-.06 8.76 8.76 0 0 1-2.63-2.62 1 1 0 0 1-.06-1.09l.33-.5a1 1 0 0 0 .09-1l-1-2a1 1 0 0 0-1.54-.27A3.17 3.17 0 0 0 8 10.58a9.65 9.65 0 0 0 5.42 5.42 3.17 3.17 0 0 0 2.34-.22 1 1 0 0 0-.05-1.49Z" />
             </svg>
           </span>
-          WhatsApp (27) 3207-0301
+          WhatsApp (66) 9.9900-6383
         </a>
       </div>
 
@@ -66,7 +66,7 @@
               <circle cx="12" cy="10" r="3" />
             </svg>
           </span>
-          Vitória · Espírito Santo
+          Sinop · Mato Grosso
         </span>
       </div>
     </div>
@@ -370,7 +370,7 @@
             <li><a href="tel:+5566992596142">(66) 9.9259-6142</a></li>
             <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Vitória • Mato Grosso</li>
+            <li>Sinop • Mato Grosso</li>
           </ul>
         </div>
 
