--- a/index.html
+++ b/index.html
@@ -116,29 +116,12 @@
         <div class="hero__slider shadow-soft" aria-label="Galeria de projetos JR Segurança">
           <div class="hero__slider-viewport">
             <div class="hero__slider-track">
-              <div class="hero__slide"><img src="assets/img/1.jpeg" alt="Equipe JR Segurança em operação 1" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/2.jpeg" alt="Equipe JR Segurança em operação 2" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/3.jpeg" alt="Equipe JR Segurança em operação 3" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/4.jpeg" alt="Equipe JR Segurança em operação 4" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/5.jpeg" alt="Equipe JR Segurança em operação 5" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/6.jpeg" alt="Equipe JR Segurança em operação 6" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/7.jpeg" alt="Equipe JR Segurança em operação 7" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/8.jpeg" alt="Equipe JR Segurança em operação 8" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/9.jpeg" alt="Equipe JR Segurança em operação 9" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/10.jpeg" alt="Equipe JR Segurança em operação 10" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/11.jpeg" alt="Equipe JR Segurança em operação 11" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/12.jpeg" alt="Equipe JR Segurança em operação 12" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/13.jpeg" alt="Equipe JR Segurança em operação 13" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/14.jpeg" alt="Equipe JR Segurança em operação 14" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/15.jpeg" alt="Equipe JR Segurança em operação 15" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/16.jpeg" alt="Equipe JR Segurança em operação 16" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/17.jpeg" alt="Equipe JR Segurança em operação 17" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/18.jpeg" alt="Equipe JR Segurança em operação 18" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/19.jpeg" alt="Equipe JR Segurança em operação 19" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/20.jpeg" alt="Equipe JR Segurança em operação 20" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/21.jpeg" alt="Equipe JR Segurança em operação 21" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/22.jpeg" alt="Equipe JR Segurança em operação 22" loading="lazy" /></div>
-              <div class="hero__slide"><img src="assets/img/23.jpeg" alt="Equipe JR Segurança em operação 23" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/a.jpeg" alt="Fundo a" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/b.jpeg" alt="Fundo b" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/c.jpeg" alt="Fundo c" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/d.jpeg" alt="Fundo d" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/e.jpeg" alt="Fundo d" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/f.jpeg" alt="Fundo d" loading="lazy" /></div>
             </div>
           </div>
 
@@ -262,26 +245,7 @@
             <li class="shadow-soft"> <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="m5 12 5 5L20 7" /></svg> Gestão de saúde ocupacional com rede credenciada </li>
           </ul>
         </div>
-        <div class="services__art shadow-soft">
-          <!-- Vertical carousel: services imagery -->
-          <div class="services__carousel" data-carousel="vertical" aria-label="Galeria de serviços JR Segurança">
-            <div class="services__carousel-viewport">
-              <div class="services__carousel-track">
-                <div class="services__carousel-slide"><img src="assets/img/20.jpeg" alt="Serviços JR Segurança 20" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/19.jpeg" alt="Serviços JR Segurança 21" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/18.jpeg" alt="Serviços JR Segurança 22" loading="lazy" /></div>
-                <div class="services__carousel-slide"><img src="assets/img/15.jpeg" alt="Serviços JR Segurança 23" loading="lazy" /></div>
-              </div>
-            </div>
-            <button class="services__carousel-control services__carousel-control--prev" type="button" aria-label="Imagem anterior">
-              <i class="bi bi-chevron-up" aria-hidden="true"></i>
-            </button>
-            <button class="services__carousel-control services__carousel-control--next" type="button" aria-label="Próxima imagem">
-              <i class="bi bi-chevron-down" aria-hidden="true"></i>
-            </button>
-            <div class="services__carousel-dots" role="tablist" aria-label="Navegação da galeria"></div>
-          </div>
-        </div>
+        
       </div>
     </section>
 
@@ -423,3 +387,4 @@
 </html>
 
 <!-- 'beneficios' and 'equipe' sections removed -->
+
