--- a/servicos-fixed.html
+++ b/servicos-fixed.html
@@ -185,6 +185,9 @@
     </div>
     <div class="footer__bottom">© <span data-year></span> JR Segurança. Todos os direitos reservados.</div>
   </footer>
+  <section class="site-credit">
+    <div class="footer__credit">Desenvolvido por <a href="https://www.sierefire.com" target="_blank" rel="noopener">SiereFire</a> - Soluções em Tecnologia</div>
+  </section>
 
   <script src="assets/js/main.js"></script>
 </body>
