--- a/servicos.html
+++ b/servicos.html
@@ -213,10 +213,13 @@
       </div>
       <div class="footer__bottom">
         <span>© <span id="year"></span> JR Segurança. Todos os direitos reservados.</span>
-        <span>CRA – SESMT completo – eSocial SST</span>
+        <span>CRA - SESMT completo - eSocial SST</span>
       </div>
     </div>
   </footer>
+  <section class="site-credit">
+    <div class="footer__credit">Desenvolvido por <a href="https://www.sierefire.com" target="_blank" rel="noopener">SiereFire</a> - Soluções em Tecnologia</div>
+  </section>
 
   <script src="assets/js/main.js"></script>
   <script>
