--- a/contato.html
+++ b/contato.html
@@ -160,6 +160,9 @@
         <span>CRA • Sesmt completo • eSocial SST</span> </div>
     </div>
   </footer>
+  <section class="site-credit">
+    <div class="footer__credit">Desenvolvido por <a href="https://www.sierefire.com" target="_blank" rel="noopener">SiereFire</a> - Soluções em Tecnologia</div>
+  </section>
   <script src="assets/js/main.js"></script>
 </body>
 
