--- a/sobre.html
+++ b/sobre.html
@@ -178,9 +178,11 @@
       </div>
     </div>
   </footer>
+  <section class="site-credit">
+    <div class="footer__credit">Desenvolvido por <a href="https://www.sierefire.com" target="_blank" rel="noopener">SiereFire</a> - Soluções em Tecnologia</div>
+  </section>
 
   <script src="assets/js/main.js"></script>
 </body>
 
 </html>
-
