--- a/contato.html
+++ b/contato.html
@@ -36,12 +36,12 @@
               stroke-linejoin="round">
               <circle cx="12" cy="12" r="10" />
               <path d="M12 6v6l3.5 2" />
-            </svg></span>Seg a Sex · 8h às 18h</span> <span class="topbar__link"><span class="topbar__icon"
+            </svg></span>Seg a Sex · 7h às 17:30h</span> <span class="topbar__link"><span class="topbar__icon"
             aria-hidden="true"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
               stroke-linecap="round" stroke-linejoin="round">
               <path d="M21 10c0 5-9 12-9 12S3 15 3 10a9 9 0 1 1 18 0Z" />
               <circle cx="12" cy="10" r="3" />
-            </svg></span>Sinop · Mato Grosso</span> </div>
+            </svg></span>Sorriso · Mato Grosso</span> </div>
     </div>
   </div>
   <header class="header">
@@ -83,7 +83,7 @@
                 target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a> — Comercial e suporte.</li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a> — Propostas e contratos.</li>
           </ul>
-          <p>Endereço: Sinop · Mato Grosso. Atendimento presencial e remoto para todo o estado.</p>
+          <p>Endereço: Sorriso · Mato Grosso. Atendimento presencial e remoto para todo o estado.</p>
         </div>
         <div class="surface-block">
           <h3>Solicite uma proposta personalizada</h3>
@@ -123,7 +123,7 @@
             <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento."
                 target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Sinop • Mato Grosso</li>
+            <li>Sorriso • Mato Grosso</li>
           </ul>
         </div>
         <div>
@@ -137,7 +137,7 @@
         </div>
         <div>
           <h4 class="footer__title">Redes sociais</h4>
-          <div class="social-links"> <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+          <div class="social-links"> <a href="https://www.instagram.com/jr.seguraca_trabalho" target="_blank" rel="noopener"
               aria-label="Instagram"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8"
                 stroke-linecap="round" stroke-linejoin="round">
                 <rect x="2" y="2" width="20" height="20" rx="5" />
