--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <circle cx="12" cy="10" r="3" />
             </svg>
           </span>
-          Sinop · Mato Grosso
+          Sorriso · Mato Grosso
         </span>
       </div>
     </div>
@@ -334,7 +334,7 @@
             <li><a href="tel:+5566992596142">(66) 9.9259-6142</a></li>
             <li><a href="https://wa.me/5566999006383?text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento." target="_blank" rel="noopener">WhatsApp (66) 9.9006-383</a></li>
             <li><a href="mailto:comercial@jrseguranca.com">comercial@jrseguranca.com</a></li>
-            <li>Sinop • Mato Grosso</li>
+            <li>Sorriso • Mato Grosso</li>
           </ul>
         </div>
 
@@ -351,7 +351,7 @@
         <div>
           <h4 class="footer__title">Redes sociais</h4>
           <div class="social-links">
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Instagram">
+            <a href="https://www.instagram.com/jr.seguraca_trabalho" target="_blank" rel="noopener" aria-label="Instagram">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="2" y="2" width="20" height="20" rx="5" />
                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37Z" />
