notorious is ts

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <li><a class="nav__link" href="index.html">Home</a></li>
           <li><a class="nav__link" href="sobre.html">Sobre</a></li>
           <li><a class="nav__link" href="servicos.html">Serviços</a></li>
+          <li><a class="nav__link" href="treinamentos.html">Treinamentos</a></li>
           <li><a class="nav__link" href="contato.html">Contato</a></li>
           <li><a class="button button--primary nav__cta-mobile" href="contato.html#formulario">Ver mais</a></li>
         </ul>
@@ -344,6 +345,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servicos.html">Serviços</a></li>
+             <li><a href="treinamentos.html">Treinamentos</a></li>
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </div>
@@ -351,7 +353,7 @@
         <div>
           <h4 class="footer__title">Redes sociais</h4>
           <div class="social-links">
-            <a href="https://www.instagram.com/jr.seguraca_trabalho" target="_blank" rel="noopener" aria-label="Instagram">
+            <a href="https://www.instagram.com/jr.seguranca_trabalho" target="_blank" rel="noopener" aria-label="Instagram">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="2" y="2" width="20" height="20" rx="5" />
                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37Z" />
