notorious is tss

--- a/servicos.html
+++ b/servicos.html
@@ -75,7 +75,7 @@
         <div class="projects-grid">
           <article class="project-card">
             <div class="project-media">
-              <img src="assets/img/20.jpeg" alt="Centro Comercial Vitória Mall" />
+              <img src="assets/img/esocial.jpg" alt="Centro Comercial Vitória Mall" />
               <div class="project-overlay"></div>
               
               <button type="button" class="project-view" aria-label="Ampliar imagem">🔍</button>
