notorious is tsss

--- a/treinamentos.html
+++ b/treinamentos.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/css/brand.css" />
 </head>
 
-<body class="page-sobre">
+<body class="page-treinamentos">
   <a class="skip-link" href="#conteudo">Pular para o conteúdo principal</a>
   <div class="topbar" role="region" aria-label="Informações de contato">
     <div class="topbar__content">
