notorious is tssss

--- a/servicos.html
+++ b/servicos.html
@@ -182,7 +182,7 @@
     <div class="footer__inner">
       <div class="footer__grid">
         <div>
-          <span class="footer__logo"><img src="assets/img/branco.png" alt="JR Segurança" /></span>
+          <span class="footer__logo"><img src="assets/img/jr_fundo_preto.png" alt="JR Segurança" /></span>
           <p class="footer__text">Consultoria especializada em Medicina e Segurança do Trabalho. Atendemos todo o Espírito Santo com foco em resultados sustentáveis.</p>
         </div>
         <div>
