notorious iss siereFire

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JR Segurança - Medicina e Segurança do Trabalho</title>
   <meta name="description"
-    content="Consultoria completa em Medicina e Segurança do Trabalho, eSocial SST, laudos e treinamentos com atendimento em todo o Espírito Santo." />
+    content="Consultoria completa em Medicina e Segurança do Trabalho, eSocial SST, laudos e treinamentos com atendimento em todo o Mato Grosso." />
   <link rel="icon" type="image/png" href="assets/img/branco.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -326,7 +326,7 @@
           <span class="footer__logo">
             <img src="assets/img/jr_fundo_preto.png" alt="JR Segurança" />
           </span>
-          <p class="footer__text">Consultoria especializada em Medicina e Segurança do Trabalho. Atendemos todo o Espírito Santo com foco em resultados sustentáveis.</p>
+          <p class="footer__text">Consultoria especializada em Medicina e Segurança do Trabalho. Atendemos todo o Mato Grosso com foco em resultados sustentáveis.</p>
         </div>
 
         <div>
