--- a/sobre.html
+++ b/sobre.html
@@ -144,7 +144,7 @@
           <span class="footer__logo">
             <img src="assets/img/jr_fundo_preto.png" alt="JR Segurança" />
           </span>
-          <p class="footer__text">Consultoria especializada em Medicina e Segurança do Trabalho. Atendemos todo o Espírito Santo com foco em resultados sustentáveis.</p>
+          <p class="footer__text">Consultoria especializada em Medicina e Segurança do Trabalho. Atendemos todo o Mato Grosso com foco em resultados sustentáveis.</p>
         </div>
         <div>
           <h4 class="footer__title">Contato</h4>
