notorious is siereFire main

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
               <div class="hero__slide"><img src="assets/img/d.jpeg" alt="Fundo d" loading="lazy" /></div>
               <div class="hero__slide"><img src="assets/img/e.jpeg" alt="Fundo d" loading="lazy" /></div>
               <div class="hero__slide"><img src="assets/img/f.jpeg" alt="Fundo d" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/g.jpeg" alt="Fundo d" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/h.jpeg" alt="Fundo d" loading="lazy" /></div>
+              <div class="hero__slide"><img src="assets/img/i.jpeg" alt="Fundo d" loading="lazy" /></div>
             </div>
           </div>
 
@@ -367,7 +370,7 @@
                 <circle cx="4" cy="4" r="2" />
               </svg>
             </a>
-            <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook">
+            <a href="https://www.facebook.com/share/1B1MRVt5ce/" target="_blank" rel="noopener" aria-label="Facebook">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M18 2h-3a4 4 0 0 0-4 4v3H8v4h3v9h4v-9h3l1-4h-4V6a1 1 0 0 1 1-1h3Z" />
               </svg>
