notorious is sierefire main

--- a/servicos.html
+++ b/servicos.html
@@ -260,7 +260,7 @@
       var descs = [
         'Gest\u00E3o completa de eventos, prazos e conformidade no eSocial.',
         'Inspe\u00E7\u00F5es peri\u00F3dicas em equipamentos e ambientes para identificar riscos e priorizar corre\u00E7\u00F5es.',
-        'PPRA, PCMSO, LTCAT e demais laudos t\u00E9cnicos para conformidade legal.',
+        'PGR, PCMSO, LTCAT e demais laudos t\u00E9cnicos para conformidade legal.',
         'Pol\u00EDticas, gest\u00E3o de riscos e atendimento \u00E0s NRs com monitoramento cont\u00EDnuo.',
         'Capacita\u00E7\u00F5es pr\u00E1ticas e te\u00F3ricas conforme NRs, com simula\u00E7\u00F5es e certifica\u00E7\u00E3o.',
         'Vistorias, relat\u00F3rios e coordena\u00E7\u00E3o t\u00E9cnica garantindo execu\u00E7\u00E3o conforme projeto, seguran\u00E7a e prazos.'
