notorious is sierefire mains

--- a/servicos.html
+++ b/servicos.html
@@ -107,7 +107,7 @@
 
           <article class="project-card">
             <div class="project-media">
-              <img src="assets/img/ltcat.jpg" alt="Residência Privada Jardim Camburi" />
+              <img src="assets/img/ltcat.jpeg" alt="Residência Privada Jardim Camburi" />
               <div class="project-overlay"></div>
               
               <button type="button" class="project-view" aria-label="Ampliar imagem">🔍</button>
